syntax = "proto3";

package NAlice.NTv;

option go_package = "a.yandex-team.ru/alice/protos/data/tv/app_metrika";
option java_package = "ru.yandex.alice.protos.data.tv.appmetrika";
option java_outer_classname = "TvAppMetrikaPayloads";

import "mapreduce/yt/interface/protos/extension.proto";
import "google/protobuf/struct.proto";

message ThContentCardOpenedPayload {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TStartupPlace {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        string From = 1 [json_name = "from", (NYT.column_name) = "from"];
        string ParentFrom = 2 [json_name = "parent_from", (NYT.column_name) = "parent_from"];
        string ParentId = 3 [json_name = "parent_id", (NYT.column_name) = "parent_id"];
        string CarouselName = 4 [json_name = "carousel_name", (NYT.column_name) = "carousel_name"];
        string CarouselPosition = 5 [json_name = "carousel_position", (NYT.column_name) = "carousel_position"];
        string ContentCardPosition = 6 [json_name = "content_card_position", (NYT.column_name) = "content_card_position"];
    }

    string Title = 1 [json_name = "title", (NYT.column_name) = "title"];
    string ContentType = 2 [json_name = "content_type", (NYT.column_name) = "content_type"];
    string ContentId = 3 [json_name = "content_id", (NYT.column_name) = "content_id"];
    string DurationSec = 4 [json_name = "duration_sec", (NYT.column_name) = "duration_sec"];
    string Genres = 5 [json_name = "genres", (NYT.column_name) = "genres"];
    reserved 6; reserved "DeviceIcookie";
    TStartupPlace StartupPlace = 7 [json_name = "startup_place", (NYT.column_name) = "startup_place"];
    string DeviceId = 8 [json_name = "device_id", (NYT.column_name) = "device_id"];
}

message TCardGeneralPayload {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string ContentId = 1 [json_name = "content_id", (NYT.column_name) = "content_id"];
    string ContentType = 2 [json_name = "content_type", (NYT.column_name) = "content_type"];
    string ParentId = 3 [json_name = "parent_id", (NYT.column_name) = "parent_id"];
    string QuasarDeviceId = 4 [json_name = "quasar_device_id", (NYT.column_name) = "quasar_device_id"];
    string ReqId = 5 [json_name = "reqid", (NYT.column_name) = "reqid"];
    string AppHostReqId = 6 [json_name = "apphost_reqid", (NYT.column_name) = "apphost_reqid"];
    string CarouselName = 7 [json_name = "carousel_name", (NYT.column_name) = "carousel_name"];
}

message TCarouselGeneralPayload {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string CarouselId = 1 [json_name = "id", (NYT.column_name) = "id"];
    string CarouselTitle = 2 [json_name = "carousel_name", (NYT.column_name) = "carousel_name"];
    int32 VerticalPosition = 3 [json_name = "y", (NYT.column_name) = "y"];
}
